deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: hw2-app
    labels:
        name: hw2-app
---
apiVersion: v1
kind: Service
metadata:
    name: hw2-service
    namespace: hw2-app
spec:
    selector:
        app: hw2
    ports:
        -   protocol: TCP
            port: 8000
            targetPort: web
    type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hw2-deployment
    namespace: hw2-app
spec:
    replicas: 2
    selector:
        matchLabels:
            app: hw2
    template:
        metadata:
            labels:
                app: hw2
        spec:
            containers:
                -   name: otus-hw2
                    image: washburn62/otus_trukhin_hw2:v7
                    ports:
                        -   name: web
                            containerPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: hw2-ingress
    namespace: hw2-app
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        -   host: arch.homework
            http:
                paths:
                    -   path: /(.*)
                        pathType: Prefix
                        backend:
                            service:
                                name: hw2-service
                                port:
                                    number: 8000
